<resources>
    <string name="app_name">WhatIate</string>

    <!--welcome-->
    <string name="welcome">반갑습니다!</string>
    <string name="nickWelcome">nickName 님! 반갑습니다!</string>
    <string name="welcome_text">내 계정에서 사용할\n닉네임과 프로필 사진을\n설정해주세요.</string>

    <!--Drawer-->
    <string name="account">내 계정</string>
    <string name="favlist">My List</string>
    <string name="whatieat">오늘 뭐 먹지?</string>
    <string name="grid">모아보기</string>
    <string name="setting">Setting</string>


    <string name="food_korean">한식</string>
    <string name="food_chinese">중식</string>
    <string name="food_japanese">일식</string>
    <string name="food_western">양식</string>
    <string name="food_school">분식</string>
    <string name="cafe">카페</string>
    <string name="pub">펍</string>

    <!--Account-->
    <string name="acc_post">게시물</string>
    <string name="acc_ate">먹은거</string>
    <string name="acc_eat">먹을거</string>
    <string name="acc_like">좋아요</string>
    <string name="acc_profile">Profile</string>
    <string name="acc_count_0">0</string>

    <!--Add Photo-->
    <string name="upload_image">사진 올리기</string>
    <string name="hint_image_content">내용을 입력하세요</string>
    <string name="upload_success">업로드 성공</string>
    <string name="upload_fail">업로드 실패</string>

    <!--hint-->
    <string name="upload_text">내용을 입력하세요</string>
    <string name="upload_resName">식당명</string>


    <!--Toolbar-->
    <string name="back">Back</string>
    <string name="next">다음</string>

    <!--myList-->
    <string name="activity_title_home">Memo</string>
    <string name="no_memo">No Memo found!</string>
    <string name="new_memo">Add Memo</string>
    <string name="update_memo">Update Memo</string>
    <string name="hint_memo">Enter your memo!</string>

    <!--searchView-->
    <string name="search_title">search</string>
    <string name="abc_search_hint">무엇을 찾고 계세요?</string>
    <string name="title_activity_ex_navi_drawer">ExNaviDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_d4__settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
