<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <!--Toolbar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/Theme.AppCompat.Light">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="What I ate"
           android:textColor="@color/colorPrimary"
           android:textSize="24sp"
           android:textStyle="bold"
           android:layout_marginLeft="150dp"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/toolbar_division"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:layout_below="@+id/myToolbar"
        android:layout_marginBottom="10dp"
        android:background="@color/colorDivision"/>

    <!--Contents-->
    <ImageView
        android:id="@+id/iv_add_photo_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/toolbar_division"
        android:layout_margin="8dp"
        android:src="@drawable/add_photo"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_division"
        android:layout_margin="8dp"
        android:layout_toEndOf="@+id/iv_add_photo_img">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_add_resName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/upload_resName"
                android:inputType="text"/>


            <EditText
                android:id="@+id/et_add_photo_content"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="top"
                android:hint="@string/upload_text"
                android:inputType="textMultiLine"/>

        </LinearLayout>



    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_add_photo_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text"
        android:layout_margin="8dp"
        android:layout_toEndOf="@+id/iv_add_photo_img"
        android:text="@string/upload_image"
        android:theme="@style/BottomStyle"
        android:onClick="clickUpload"/>

</RelativeLayout>